# MsFit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: words_10.txt  words_11.txt  words_12.txt  words_13.txt  words_14.txt  words_15.txt  words_16.txt  words_17.txt  words_18.txt  words_19.txt  words_2.txt  words_20.txt  words_21.txt  words_22.txt  words_23.txt  words_24.txt  words_25.txt  words_26.txt  words_27.txt  words_28.txt  words_29.txt  words_3.txt  words_30.txt  words_31.txt  words_4.txt  words_5.txt  words_6.txt  words_7.txt  words_8.txt  words_9.txt
include/msfit/engine/: dataset_manager.h  fill_manager.h  word_searcher.h  word_utils.h
include/msfit/interface/: bottom-menu-container.h  bottom_menu_container.h  canvas-container.h  canvas_container.h  grid-container.h  grid_container.h  main-container.h  main-window.h  main_container.h  main_window.h  messages_list.h  msfit-interface.h  msfit_button.h  msfit_interface.h  puzzle_interface.h  right-menu-container.h  right_menu_container.h  state.h
include/msfit/puzzle/: element_types.h  grid_manager.h  grid_word.h  grid_word.ipp  puzzle_graph.h  puzzle_grid.h  puzzle_grid.ipp  square.h  square.ipp
include/msfit/utilities/: drawing_utils.h  state.h  utils.h  vector2.h  vector2.ipp
scripts/: README.md  alphabetized-entries.txt  analysis.py  get_wordlists.ipynb  get_words.ipynb  get_words.py  utils.py
scripts/.ipynb_checkpoints/: get_wordlists-checkpoint.ipynb  get_words-checkpoint.ipynb  word_analysis-checkpoint.ipynb
scripts/filtered_data/broda/: broda_450.txt  filtered_broda_0.txt  filtered_broda_1.txt  filtered_broda_4000.txt  filtered_broda_4001.txt  filtered_broda_4002.txt  filtered_broda_4003.txt  filtered_broda_4004.txt  filtered_broda_4005.txt  filtered_broda_4006.txt  filtered_broda_4007.txt  filtered_broda_4008.txt  filtered_broda_4009.txt  filtered_broda_4010.txt  filtered_broda_450.txt  filtered_broda_456.txt  filtered_broda_x.txt  filtered_broda_x0.txt  filtered_broda_x2.txt  filtered_broda_x23.txt  filtered_broda_x24.txt
scripts/filtered_data/harrington/: filtered_harrington-nouns.txt
scripts/filtered_data/oed_updates/: oed_updates_2013.txt  oed_updates_2014.txt  oed_updates_2015.txt  oed_updates_2016.txt  oed_updates_2017.txt  oed_updates_2018.txt  oed_updates_2019.txt  oed_updates_2020.txt  oed_updates_2021.txt
scripts/filtered_data/quintas/: filtered_quintas_nounlist.txt
scripts/filtered_data/random/: random_1.txt  random_2.txt  random_3.txt  random_4.txt  random_5.txt  starting-pair_a.txt  starting-pair_b.txt  starting-pair_c.txt  starting-pair_d.txt  starting-pair_e.txt
scripts/filtered_data/wordnet/: filtered_wordnet_0.txt  filtered_wordnet_1.txt  filtered_wordnet_10.txt  filtered_wordnet_100.txt  filtered_wordnet_101.txt  filtered_wordnet_102.txt  filtered_wordnet_103.txt  filtered_wordnet_104.txt  filtered_wordnet_105.txt  filtered_wordnet_106.txt  filtered_wordnet_107.txt  filtered_wordnet_108.txt  filtered_wordnet_109.txt  filtered_wordnet_11.txt  filtered_wordnet_110.txt  filtered_wordnet_111.txt  filtered_wordnet_112.txt  filtered_wordnet_113.txt  filtered_wordnet_114.txt  filtered_wordnet_115.txt  filtered_wordnet_116.txt  filtered_wordnet_117.txt  filtered_wordnet_118.txt  filtered_wordnet_119.txt  filtered_wordnet_12.txt  filtered_wordnet_120.txt  filtered_wordnet_121.txt  filtered_wordnet_122.txt  filtered_wordnet_123.txt  filtered_wordnet_124.txt  filtered_wordnet_125.txt  filtered_wordnet_126.txt  filtered_wordnet_127.txt  filtered_wordnet_128.txt  filtered_wordnet_129.txt  filtered_wordnet_13.txt  filtered_wordnet_130.txt  filtered_wordnet_131.txt  filtered_wordnet_132.txt  filtered_wordnet_133.txt  (+115 more)
scripts/prefilter_data/: broda_0.txt  broda_1.txt  broda_10.txt  broda_100.txt  broda_101.txt  broda_102.txt  broda_103.txt  broda_104.txt  broda_105.txt  broda_106.txt  broda_107.txt  broda_108.txt  broda_109.txt  broda_11.txt  broda_110.txt  broda_111.txt  broda_112.txt  broda_113.txt  broda_114.txt  broda_115.txt  broda_116.txt  broda_117.txt  broda_118.txt  broda_119.txt  broda_12.txt  broda_120.txt  broda_121.txt  broda_122.txt  broda_123.txt  broda_124.txt  broda_125.txt  broda_126.txt  broda_127.txt  broda_128.txt  broda_129.txt  broda_13.txt  broda_130.txt  broda_131.txt  broda_132.txt  broda_133.txt  (+643 more)
scripts/raw_data/: https _richardharringtonblog.com_list-of-nouns.html
scripts/wordlists/: broda_10.txt  broda_11.txt  broda_12.txt  broda_13.txt  broda_14.txt  broda_15.txt  broda_16.txt  broda_17.txt  broda_18.txt  broda_19.txt  broda_20.txt  broda_21.txt  broda_22.txt  broda_23.txt  broda_24.txt  broda_25.txt  broda_26.txt  broda_27.txt  broda_28.txt  broda_29.txt  broda_3.txt  broda_30.txt  broda_31.txt  broda_32.txt  broda_33.txt  broda_34.txt  broda_35.txt  broda_36.txt  broda_37.txt  broda_38.txt  broda_39.txt  broda_4.txt  broda_40.txt  broda_41.txt  broda_42.txt  broda_43.txt  broda_44.txt  broda_45.txt  broda_46.txt  broda_47.txt  (+69 more)
src/: CMakeLists.txt
src/engine/: dataset-manager.cpp  dataset_manager.cpp  fill_manager.cpp  word_searcher.cpp  word_utils.cpp
src/interface/: bottom-menu-container.cpp  bottom_menu_container.cpp  canvas-container.cpp  canvas_container.cpp  grid-container.cpp  grid_container.cpp  main-container.cpp  main-window.cpp  main_container.cpp  main_window.cpp  messages_list.cpp  msfit-interface.cpp  msfit_button.cpp  msfit_interface.cpp  right-menu-container.cpp  right_menu_container.cpp  state.cpp
src/puzzle/: grid_manager.cpp  puzzle_grid.cpp  square.cpp
src/utilities/: drawing-utils.cpp  drawing_utils.cpp  state.cpp  utils.cpp  vector2.cpp
test/: CMakeLists.txt
test/src/: main_test.cpp
